<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/bottom_sheet_title"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:fontFamily="serif-monospace"
        android:text="@string/bottom_sheet_title_label_op1"
        android:textColor="@color/blue_500"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="2dp"
        android:background="@android:color/darker_gray" />

    <EditText
        android:id="@+id/edt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/blue_500"
        android:ems="10"
        android:hint="@string/edt_title_label"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/blue_700"
        android:textCursorDrawable="@null" />

    <EditText
        android:id="@+id/edt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="19dp"
        android:backgroundTint="@color/blue_500"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/edt_description_label"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:lines="5"
        android:textColor="@color/blue_700"
        android:textCursorDrawable="@null" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/operation_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/blue_500"
        android:text="@string/operation_bt_label_op1"
        android:textColor="@color/white"
        app:icon="@drawable/ic_add"
        app:iconTint="@color/white" />
</LinearLayout>