<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_bottom_sheet"
    android:orientation="vertical">

    <TextView
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:fontFamily="serif-monospace"
        android:text="@string/select_option_label"
        android:textColor="@color/blue_500"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="2dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/edit_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/blue_500"
        android:drawableEnd="@drawable/ic_edit"
        android:text="@string/menu_edit_label"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/red"
        android:drawableEnd="@drawable/ic_delete"
        android:text="@string/menu_delete_label"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>